2014-12-22  Smacky

	* Ask user whether to continue if there is an existing root
	  installation.

2014-12-19  Smacky

	* Add nice GUI uninstallation script.
	* Separate install script from general functions and gui functions.
	* Use [^>} instead of . when removing HTML tags in cli mode.
	* Cap progress at target when copying arbitrary files (point being that
	  zenity halts the progress pipeline at 100% so if we reach that
	  prematurely, the installation will be incomplete).
	* Make licence install automatically.

2014-12-18  Smacky

	* Make line deletion in replace_text work.

2014-12-13  Smacky

	* More attractive gui_progress for cli.
	* Improve progress count of file unpacker (it's much smoother).

2014-12-12  Smacky

	* Add notification at 100% progress.
	* Change $GUI_PROGRESS string to function argument.
	* Respect $3 where $1 is ! in gui_showtext for qt (means ask do you
	  accept [y/n]).

2014-12-11  Smacky

	* Use . instead of [^c] regexp in replace_text $2.
	* Make qt/kdialog progress bar work.

2014-12-09  Smacky

	* Replace {{gui ...}} special markup with <!-- GUI=... -->.

2014-12-08  Smacky

	* Some work on the desktop entry file. In particular, KDE seems not to
	  handle this as I would expect. This should at least make it
	  functional.
	* Add closing </p> and </pre> tags in .html files and remove them in
	  gui_showtext for qt. I omitted these originally because kdialog
	  (wrongly) prints them as inline text. But without them zenity
	  (rightly) does not know where to end the pre section (</p> are
	  optional anyway.)

2014-12-07  Smacky

	* Ensure installed files have correct permissions.
	* Fix typo in desktop entry.

2014-12-06  Smacky

	* Always be explicit about $INSTALLSUFFIX to prevent uninstall
	  disasters.
	* Improve validation of installation directory.

2014-12-04  Smacky

	* Initial release.