@@ -1,5 +1,5 @@
 # general.bash
-# Copyright (C) 2014 Julian Arnold
+# Copyright (C) 2014-2015 Julian Arnold
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
