@@ -5,11 +5,11 @@
 
 <p>The files that will be deleted are:</p>
 
-<pre>  %LAUNCHER%</pre>
-<pre>  %DESKTOPENTRY%</pre>
+<pre>  %3%</pre>
+<pre>  %2%</pre>
 
 <p>And <em>everything</em> under:</p>
 
-<pre>  %INSTALLDIR%</pre>
+<pre>  %1%</pre>
 
 <p>Only proceed if you are sure you want this to happen</p>
